css/styles.css
* {
	box-sizing: border-box;
}

:root {
	--primary-color: #1f2833;
	--secondary-color: #952e6b;
	--light-blue: #db2b8e;
	--black: #0b0c10;
	--grey: #c5c6c7;
	--snow-light: #91cded;
	--snow-medium: #21b6c3;
	--snow-dark: #4388cf;
	--f-size-main: 1.125rem;
	--f-weight-main: 400;
	--l-height-main: 1.4;
	--h2-size: 1.313rem;
}

html {
	font-size: 16px;
	overflow-x: hidden;
}

body {
	background-color: var(--primary-color);
	font-family: 'Roboto', sans-serif;
	font-weight: var(--f-weight-main);
	font-size: var(--f-size-main);
	line-height: var(--l-height-main);
	color: white;
	overflow-x: hidden;
	max-width: 1150px;
	position: relative;
	margin: auto;
}

.title {
	display: none;
	background-color: var(--primary-color);
	text-align: center;
	color: rgb(148, 143, 143);
	align-items: center;
	justify-content: center;
	height: 100vh;
	width: 100vw;
	letter-spacing: 0.0625rem;
	white-space: nowrap;
	margin: 0 auto;
	animation: typing 3.5s steps(40, end), welcome 0s ease-in 5s forwards;
}

@keyframes typing {
	from {
		width: 0;
	}
	to {
		width: 100%;
	}
}

@keyframes welcome {
	to {
		width: 0;
		height: 0;
	}
}
@-webkit-keyframes welcome {
	to {
		width: 0;
		height: 0;
		visibility: hidden;
	}
}

@keyframes blink {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

.opening {
	background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
	background-size: cover;
	color: transparent;
	-moz-background-clip: text;
	-webkit-background-clip: text;
	text-transform: uppercase;
	font-size: 7.5rem;
	line-height: 6.5;
	margin: 0.625rem 0;
	width: 100%;
	z-index: 50;
}

@media all and (max-width: 600px) {
	.opening {
		font-size: 6.38rem !important;
	}
}

@media all and (max-width: 480px) {
	.opening {
		font-size: 6.6875rem !important;
	}
	.title {
		width: 150vw;
		transform: translateX(100%);
		animation: slide 9s linear forwards, welcome 0s ease-in 9s forwards;
	}
}

@keyframes slide {
	from {
		transform: translateX(60%);
	}
	to {
		transform: translateX(-100%);
	}
}

.h1,
h1 {
	color: var(--light-blue);
	font-size: 3.4375rem;
	font-weight: 700;
	text-align: center;
	margin: 0.313rem auto;
}

@media all and (max-width: 600px) {
	.h1,
	h1,
	.sentence {
		font-size: 2.8125rem !important;
	}

	.input-cursor {
		height: 2.8125rem !important;
	}
}

@media all and (max-width: 480px) {
	.h1,
	h1,
	.sentence {
		font-size: 2.5rem !important;
	}

	.input-cursor {
		height: 2.5rem !important;
	}
}

@media all and (max-width: 360px) {
	h1,
	.sentence {
		font-size: 2.275rem !important;
	}

	.input-cursor {
		height: 2.275rem !important;
	}
}

@media all and (max-width: 290px) {
	h1,
	.sentence {
		font-size: 1.8rem !important;
	}

	.input-cursor {
		height: 1.8rem !important;
	}
}

.typing-container {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 4.0625rem;
}

#feature-text {
	display: inline;
}

.block {
	display: inline-block;
	height: 4.0625rem;
}

.sentence {
	display: inline-block;
	color: var(--light-blue);
	font-size: 3.4375rem;
	font-weight: 700;
}

.input-cursor {
	display: inline;
	width: 0.1875rem;
	height: 3.125rem;
	background-color: white;
	margin-left: 0.5rem;
	margin-bottom: -0.0625rem;
	animation: blink 0.6s linear infinite alternate;
}

@keyframes blink {
	0% {
		opacity: 1;
	}
	40% {
		opacity: 1;
	}
	60% {
		opacity: 0;
	}
	100% {
		opacity: 0;
	}
}
#typedtext {
	min-height: 10rem;
}

.typedtext::after {
	content: '';
	position: absolute;
	width: 0.625rem;
	height: 1%;
	border-bottom: 1px solid black;
	top: 1.25rem;
	animation: blink 0.65s infinite ease;
}

@keyframes blink {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

h2 {
	color: var(--light-blue);
	font-size: var(--h2-size);
	font-weight: 600;
	text-align: center;
	font-family: 'Playfair Display', serif;
	margin: 0.3125rem auto;
}

.grid p {
	color: var(--primary-color);
}

/* all a's must go in this order to work */
a {
	color: var(--light-blue);
	text-decoration: none;
	transition-duration: 0.3s;
	cursor: pointer;
}

a:hover,
a:focus {
	text-decoration: none;
	opacity: 0.5;
	color: white;
}

.button {
	border: none;
	display: block;
	font-family: inherit;
	background-color: var(--primary-color);
	color: white;
	text-decoration: none;
	width: 75%;
	max-width: 18.75rem;
	text-align: center;
	margin: 3.75rem auto;
	padding: 0.625rem;
	border-radius: 3px;
	border-bottom: 0.125rem solid rgba(0, 0, 0, 0.3);
	transition: 0.9s ease;
}

button:hover,
button:focus,
.button:hover,
.button:focus {
	cursor: pointer;
	opacity: 0.9;
}

.index_button:hover,
.index_button:focus {
	background-color: var(--secondary-color);
}

.primary_button,
.index_button {
	border: 2px solid var(--light-blue);
	font-size: 1.125rem;
	color: var(--light-blue);
	min-width: 17.25rem;
	margin: 0.75rem auto;
	padding: 1.25rem;
	border-bottom: 2px solid #772c64;
	border-right: 2px solid #772c64;
}
.primary_button {
	margin-bottom: 3.75rem;
}
@media all and (max-width: 560px) {
	.primary_button,
	.index_button {
		margin: 1.75rem auto;
		padding: 0.625rem;
	}
}

.button_out {
	margin: 5rem auto;
	grid-column: 3;
	grid-row: 2;
}
@media all and (max-width: 900px) {
	.button_out {
		grid-column: 2;
		grid-row: 4;
		margin: 3rem auto;
	}
}

.primary_button:hover,
.primary_button:focus {
	background-color: var(--secondary-color);
}

.button_secondary {
	background-color: var(--light-blue);
	border: 0.094rem solid var(--black);
	border-bottom: 0.125rem solid #030304;
}

.button_secondary:hover,
.button_secondary:focus {
	background-color: var(--secondary-color);
}

.page-header {
	display: flex;
	padding: 1.25rem;
	height: 6.25rem;
	clear: both;
	width: 100%;
	max-width: 1120px;
	text-align: center;
	margin: 0 auto;
}

.page-header__item {
	flex: 0 1 12.5rem;
}

/* choose the last child of the parent to be right aligned. */
.page-header__item:last-child {
	flex-grow: 1;
	text-align: right;
}

.main-navigation {
	margin-right: 5.5rem;
	margin-top: 0.6rem;
	font-size: 1.25rem;
}
/* ... */

